<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Self-Hosted GPS Tracker</string>
    
    <string name="button_toggle">Tracker</string>
    <string name="button_flush">Flush</string>
    
    <string name="desc_logo">Logo</string>
    
    <string name="hint_url">http(s)://server/path</string>

    <string name="invalid_number">Invalid number</string>

    <string name="menu_settings">Settings</string>
    
    <string name="pref_gps_updates">GPS Updates (seconds)</string>
    <string name="pref_gps_updates_summary">Update GPS position approximately every… (5 seconds minimum)</string>
    <string name="pref_gps_updates_too_low">Sorry, this value is too low.</string>
    <string name="pref_gps_updates_too_high">Sorry, this value is greater than max run time.</string>
    <string name="pref_battery_drain">Watch out! Values below 30s can drain your battery.</string>

    <string name="pref_max_run_time">Max run time (hours)</string>
    <string name="pref_max_run_time_summary">(defaults to 8 hours)</string>
    <string name="pref_max_run_time_too_low">Sorry, this value is lower than GPS updates.</string>

    <string name="pref_timestamp">Timestamp on each request</string>
    <string name="pref_timestamp_summary">Add t=(milliseconds) to the parameters</string>
    
    <string name="text_legend_url_0">Send GPS coordinates to :</string>
    <string name="text_legend_url_1">Example: http://herverenault.fr/gps</string>
    <string name="text_legend_url_2">Latitude and longitude added automatically</string>
    <string name="text_legend_url_3">as in http://herverenault.fr/gps?lat=…&amp;lon=…</string>
    
    <string name="text_network_status">Unknown network status</string>
    <string name="text_network_status_enabled">Network enabled</string>
    <string name="text_network_status_disabled">Warning! Network disabled!</string>
    
    <string name="text_gps_status">Unknown GPS status</string>
    <string name="text_gps_status_enabled">GPS enabled</string>
    <string name="text_gps_status_disabled">Warning! GPS disabled!</string>
    
    <string name="text_running_since">Running since</string>
    <string name="text_stopped_on">Stopped on</string>
    <string name="text_killed">Android killed the application</string>
    
    <string name="toast_service_running">Tracker is on</string>
    <string name="toast_service_stopped">Tracker is off</string>
    <string name="toast_prefs_restart">Don\'t forget to restart tracking!</string>

    <string name="waiting_for_gps_data">Waiting for GPS data</string>
    <string name="last_location_sent_at">Last location sent at</string>
    <string name="http_request_ok">OK</string>
    <string name="http_request_failed">failed</string>

    <string name="error_malformed_url">Invalid URL</string>
    <string name="error_unknown_host">Unknown host or network down</string>
    <string name="error_ssl">HTTPS connexion problem</string>
    <string name="error_timeout">HTTP timeout</string>

</resources>
